# Finance-Projects

./: .env.example  .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: backtests.py  events.py  market.py  research.py
backend/quant/backtesting/: __init__.py  engine.py  indicator_rules.py  strategy_engine.py
backend/quant/events/: __init__.py  __main__.py  manifest.py  paths.py  pull.py  report.py  schema.py  store.py
backend/quant/execution/: __init__.py  base.py  readiness.py
backend/quant/indicators/: __init__.py  technical.py
backend/quant/metrics/: __init__.py  performance.py  statistics.py
backend/quant/research/: __init__.py  artifacts.py  gemini_reviewer.py  llm_reviewer.py  perplexity_researcher.py
backend/quant/risk/: __init__.py  allocation.py  costs.py
backend/quant/sentiment/: __init__.py
backend/quant/strategies/: __init__.py  base.py  cross_sectional_momentum.py  ema_crossover.py
backend/quant/universe/: __init__.py  crypto_universe.py
backend/quant/validation/: __init__.py  purged.py  splits.py  (+1 more)
backend/tests/: test_allocation.py  test_cross_sectional_momentum.py  test_crypto_universe.py  test_events_ingest.py  test_events_router.py  test_execution_readiness.py  test_indicator_rules_backtest.py  test_market_symbol_normalization.py  test_metrics.py  test_multi_asset_backtest_engine.py  test_perplexity_researcher.py  test_research_reviewer.py  test_strategy_backtest_engine.py  test_technical_indicators.py  test_validation_utils.py  test_yfinance_retry.py
(+326 files in other folders)
